race between DatabasesCloner::_succeed_inlock and DataReplicator::_doNextActions_InitialSync_inlock() could prevent initial sync from completing

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.4.0-rc4
    • Affects Version/s: None
    • Component/s: Replication
    • None
    • Fully Compatible
    • ALL
    • Repl 2016-11-21
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The DatabasesClonermay still be active when the last oplog fetcher callback is invoked.

      [js_test:rename_collection_temp] 2016-11-10T20:51:43.995+0000 d20261| 2016-11-10T20:51:43.994+0000 I REPL     [repl writer worker 15] data clone finished, status: OK
      [js_test:rename_collection_temp] 2016-11-10T20:51:43.995+0000 d20261| 2016-11-10T20:51:43.995+0000 I REPL     [replication-0] No need to apply operations. (currently at { : Timestamp 1478811101000|1 })
      2016-11-10 20:51:45 +0000	
      [js_test:rename_collection_temp] 2016-11-10T20:51:45.750+0000 d20261| 2016-11-10T20:51:45.749+0000 I REPL     [ReplicationExecutor] Member ip-10-37-182-112:20260 is now in state PRIMARY
      2016-11-10 20:52:43 +0000	
      [js_test:rename_collection_temp] 2016-11-10T20:52:43.995+0000 d20260| 2016-11-10T20:52:43.995+0000 I -        [conn4] end connection 10.37.182.112:46555 (4 connections now open)
      2016-11-10 21:01:42 +0000	
      [js_test:rename_collection_temp] 2016-11-10T21:01:42.018+0000 assert.soon failed, msg:Awaiting secondaries
      

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: