SERVER-26999 fixed race between DatabasesCloner callback and DataReplicator::_onApplierReadyStart